--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <meta property="og:title" content="GhostChat - Private Self-Destructing Conversations" />
     <meta property="og:description" content="Private conversations that vanish without a trace. No accounts, no history." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GhostChat - Private Self-Destructing Conversations" />
     <meta name="twitter:description" content="Private conversations that vanish without a trace." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
