--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>GhostChat - Private Self-Destructing Conversations</title>
-    <meta name="description" content="Private conversations that vanish without a trace. No accounts, no history, no identity. End-to-end encrypted ephemeral chat." />
-    <meta name="author" content="GhostChat" />
-    <meta name="theme-color" content="#0a0c10" />
-    
-    <!-- Prevent caching for privacy -->
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
 
-    <meta property="og:title" content="GhostChat - Private Self-Destructing Conversations" />
-    <meta property="og:description" content="Private conversations that vanish without a trace. No accounts, no history." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>GhostChat - Private Self-Destructing Conversations</title>
+  <meta name="description"
+    content="Private conversations that vanish without a trace. No accounts, no history, no identity. End-to-end encrypted ephemeral chat." />
+  <meta name="author" content="GhostChat" />
+  <meta name="theme-color" content="#0a0c10" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GhostChat - Private Self-Destructing Conversations" />
-    <meta name="twitter:description" content="Private conversations that vanish without a trace." />
-    <meta name="twitter:image" content="/placeholder.svg" />
-  </head>
+  <!-- Prevent caching for privacy -->
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:title" content="GhostChat - Private Self-Destructing Conversations" />
+  <meta property="og:description"
+    content="Private conversations that vanish without a trace. No accounts, no history." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/placeholder.svg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="GhostChat - Private Self-Destructing Conversations" />
+  <meta name="twitter:description" content="Private conversations that vanish without a trace." />
+  <meta name="twitter:image" content="/placeholder.svg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
